fix(esl-utils): fix page content jumping after scroll lock

--- a/src/modules/esl-utils/dom/scroll.less
+++ b/src/modules/esl-utils/dom/scroll.less
@@ -8,13 +8,15 @@
 
 html[esl-scroll-lock] body {
   overflow: hidden !important;
-
-  max-width: 100vw !important;
-  max-height: 100vh !important;
 }
 
 html[esl-scroll-lock='native'] {
   overflow-y: scroll !important;
+
+  body {
+    max-width: 100vw !important;
+    max-height: 100vh !important;
+  }
 }
 
 html[esl-scroll-lock='pseudo'] {
